force-app/main/default/objects/Place__c/fields/ChildDiscount__c.field-meta.xml
<CustomField>
    <fullName>ChildDiscount__c</fullName>
    <label>ChildDiscount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>