force-app/main/default/objects/Place__c/fields/FamilyDiscount__c.field-meta.xml
<CustomField>
    <fullName>FamilyDiscount__c</fullName>
    <label>FamilyDiscount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>