force-app/main/default/objects/Place__c/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <label>Images</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>