force-app/main/default/objects/Place__c/fields/StudentDiscount__c.field-meta.xml
<CustomField>
    <fullName>StudentDiscount__c</fullName>
    <label>StudentDiscount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>