force-app/main/default/objects/Place__c/fields/TicketPrice__c.field-meta.xml
<CustomField>
    <fullName>TicketPrice__c</fullName>
    <label>TicketPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>