force-app/main/default/objects/Place__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Shopping center</fullName>
            </value>
            <value>
                <fullName>City center</fullName>
            </value>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Luna park</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>Statue</fullName>
            </value>
            <value>
                <fullName>Fortress</fullName>
            </value>
            <value>
                <fullName>Zoo</fullName>
            </value>
            <value>
                <fullName>Viewpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>